[TD] Patrons' Logic Added
Will want 1 Drink every X to Y seconds, will not accept drinks otherwise.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,6 +78,8 @@ LastLevel=/Game/(LD)Gaetan/RumOnTheRocks
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/(PRG)Everyone/WaterChore_Patrons.WaterChore_Patrons
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -137,7 +139,7 @@ MRUItem7=/Game/(ND)Yohan/LevelYohan
 MRUItem8=/Game/(LD)Maxime/LevelGaetan
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/(PRG)Everyone
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
@@ -1179,25 +1181,26 @@ USnapSystemSettings=InputSettings.Bindings.AxisMappings,
 KillerRake_C=
 SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 RumOnTheRocks_C=
+WaterChore_Patrons_C=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem1=/Game/(PRG)Everyone/KillerRake
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/(PRG)Everyone/WaterPaymentZone
 MRUItem2=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/(PRG)Everyone/Spawners
-MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem6=/Game/(LD)Maxime/LevelMax
-MRUItem7=/Game/(LD)Maxime/LVL
-MRUItem8=/Game/(LD)Gaetan/LevelGaetan
-MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem10=/Game/(PRG)Everyone/Ground_Spikes1
-MRUItem11=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
-MRUItem12=/Game/Ingredients/Mats/LightShaftMaterial
-MRUItem13=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
-MRUItem14=/Game/Ingredients/Mats/GoldenEmissive
-MRUItem15=/Game/Ingredients/Ingredients/Coin
-MRUItem16=/Game/(PRG)Everyone/WaterPaymentZone
+MRUItem3=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem4=/Game/(PRG)Everyone/KillerRake
+MRUItem5=/Game/(PRG)Everyone/Spawners
+MRUItem6=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem7=/Game/(LD)Maxime/LevelMax
+MRUItem8=/Game/(LD)Maxime/LVL
+MRUItem9=/Game/(LD)Gaetan/LevelGaetan
+MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem11=/Game/(PRG)Everyone/Ground_Spikes1
+MRUItem12=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
+MRUItem13=/Game/Ingredients/Mats/LightShaftMaterial
+MRUItem14=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
+MRUItem15=/Game/Ingredients/Mats/GoldenEmissive
+MRUItem16=/Game/Ingredients/Ingredients/Coin
 MRUItem17=/Game/(PRG)Everyone/WaterTower
 MRUItem18=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
 MRUItem19=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
@@ -2373,6 +2376,24 @@ PrimitiveComponent.Variable=True
 PrimitiveComponent.Cooking=True
 KillerRake_C.TransformCommon=True
 Ground_Spikes1_C.TransformCommon=True
+WaterChore_Patrons_C.Default=True
+WaterChore_Patrons_C.Rendering=True
+WaterChore_Patrons_C.Replication=True
+WaterChore_Patrons_C.Collision=True
+WaterChore_Patrons_C.Input=True
+WaterChore_Patrons_C.Actor=True
+WaterChore_Patrons_C.TransformCommon=True
+BillboardComponent.Variable=True
+BillboardComponent.TransformCommon=True
+BillboardComponent.Sockets=True
+BillboardComponent.Sprite=True
+BillboardComponent.Rendering=True
+BillboardComponent.Navigation=True
+BillboardComponent.Tags=True
+BillboardComponent.ComponentReplication=True
+BillboardComponent.Cooking=True
+BillboardComponent.Events=True
+WaterChore_Patrons_C.Components=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2642,10 +2663,10 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2654,7 +2675,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[33]\" \"Object.Console.ConsoleKeys\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshActor=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -2689,6 +2710,7 @@ ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.St
 KillerRake_C=
 RumOnTheRocks_C=
 LevelScriptActor=
+WaterChore_Patrons_C="\"Object.CoinSpawn\" \"Object.CoinSpawn\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
