--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,7 +69,7 @@ LastExecutedLaunchName=DESKTOP-K5HTRQ0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=320,Y=160)
+MultipleInstancePositions=(X=-8,Y=-8)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
@@ -78,7 +78,8 @@ LastLevel=/Game/(LD)Gaetan/RumOnTheRocks
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/(PRG)Everyone/WaterChore_Patrons.WaterChore_Patrons
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
+OpenAssetsAtExit=/Game/(PRG)Everyone/KillerRake.KillerRake
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -129,11 +130,11 @@ RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/(LD)Maxime/LevelMax
-MRUItem3=/Game/(LD)Maxime/LVL
-MRUItem4=/Game/(LD)Gaetan/LevelGaetan
-MRUItem5=/Game/(PRG)Jonathan/LvlTest
+MRUItem1=/Game/(PRG)Jonathan/LvlTest
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/(LD)Maxime/LevelMax
+MRUItem4=/Game/(LD)Maxime/LVL
+MRUItem5=/Game/(LD)Gaetan/LevelGaetan
 MRUItem6=/Game/(LD)Gaetan/LevelGaetan_2_Hexa
 MRUItem7=/Game/(ND)Yohan/LevelYohan
 MRUItem8=/Game/(LD)Maxime/LevelGaetan
@@ -205,7 +206,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
+UNR=G:/Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
 BRUSH=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBX=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBXAnim=../../../../../../Fork/Bone_To_Be_Bad/Content/
@@ -1091,7 +1092,7 @@ bTimelineDisplayCurveKeys=False
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Head_C=StaticMeshComponent.Physics.ConstraintsGroup,
-K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 ThirdPersonCharacter_C=
 Bucket_C=
@@ -1170,7 +1171,7 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.File Path,
-MonSuperSeau_C=
+MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 ThirdPersonGameMode_C=
 Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 AnimBP_Skeleton_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
@@ -1182,28 +1183,29 @@ KillerRake_C=
 SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 RumOnTheRocks_C=
 WaterChore_Patrons_C=
+BeerMug_C=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/(PRG)Everyone/WaterPaymentZone
-MRUItem2=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem3=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem4=/Game/(PRG)Everyone/KillerRake
-MRUItem5=/Game/(PRG)Everyone/Spawners
-MRUItem6=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem7=/Game/(LD)Maxime/LevelMax
-MRUItem8=/Game/(LD)Maxime/LVL
-MRUItem9=/Game/(LD)Gaetan/LevelGaetan
-MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem11=/Game/(PRG)Everyone/Ground_Spikes1
-MRUItem12=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
-MRUItem13=/Game/Ingredients/Mats/LightShaftMaterial
-MRUItem14=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
-MRUItem15=/Game/Ingredients/Mats/GoldenEmissive
-MRUItem16=/Game/Ingredients/Ingredients/Coin
-MRUItem17=/Game/(PRG)Everyone/WaterTower
-MRUItem18=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem19=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem2=/Game/(PRG)Everyone/KillerRake
+MRUItem3=/Game/(LD)Gaetan/RumOnTheRocks
+MRUItem4=/Game/(PRG)Jonathan/LvlTest
+MRUItem5=/Game/(PRG)Everyone/WaterTower
+MRUItem6=/Game/(PRG)Everyone/WaterChore_Patrons
+MRUItem7=/Game/(PRG)Everyone/WaterPaymentZone
+MRUItem8=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem9=/Game/(PRG)Everyone/Spawners
+MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem11=/Game/(LD)Maxime/LevelMax
+MRUItem12=/Game/(LD)Maxime/LVL
+MRUItem13=/Game/(LD)Gaetan/LevelGaetan
+MRUItem14=/Game/(PRG)Everyone/Ground_Spikes1
+MRUItem15=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
+MRUItem16=/Game/Ingredients/Mats/LightShaftMaterial
+MRUItem17=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
+MRUItem18=/Game/Ingredients/Mats/GoldenEmissive
+MRUItem19=/Game/Ingredients/Ingredients/Coin
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -2394,6 +2396,14 @@ BillboardComponent.ComponentReplication=True
 BillboardComponent.Cooking=True
 BillboardComponent.Events=True
 WaterChore_Patrons_C.Components=True
+WaterChore_Patrons_C.Tick=True
+BeerMug_C.TransformCommon=True
+BeerMug_C.Default=True
+BeerMug_C.Rendering=True
+BeerMug_C.Replication=True
+BeerMug_C.Collision=True
+BeerMug_C.Input=True
+BeerMug_C.Actor=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2438,7 +2448,7 @@ bHideUnrelatedNodes=False
 /Game/(PRG)Everyone/WaterPaymentZone.WaterPaymentZone=0
 /Game/(PRG)Everyone/WaterTower.WaterTower=0
 /Game/(PRG)Jonathan/LvlTest.LvlTest:PersistentLevel.LvlTest=0
-/Game/(LD)Gaetan/RumOnTheRocks.RumOnTheRocks:PersistentLevel.RumOnTheRocks=1
+/Game/(LD)Gaetan/RumOnTheRocks.RumOnTheRocks:PersistentLevel.RumOnTheRocks=0
 /Game/PolygonPirates/ParticleFX/P_FX_Bonfire.P_FX_Bonfire=1
 /Game/Ingredients/Mats/GoldenEmissive.GoldenEmissive=1
 /Game/Ingredients/Ingredients/Coin.Coin=1
@@ -2446,8 +2456,10 @@ bHideUnrelatedNodes=False
 /Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01.SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01=1
 /Game/(PRG)Everyone/KillerRake.KillerRake=1
 /Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1=1
+/Game/(PRG)Everyone/WaterChore_Patrons.WaterChore_Patrons=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/(PRG)Everyone/BeerMug.BeerMug;
 RecentlyPlaced=/Game/(PRG)Everyone/KillerRake.KillerRake;
 RecentlyPlaced=/Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1;
 RecentlyPlaced=/Game/(PRG)Everyone/Art/LitLanterns.LitLanterns;
@@ -2467,7 +2479,6 @@ RecentlyPlaced=/Game/(PRG)Everyone/Art/LitBottleCandle.LitBottleCandle;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_01.SM_Env_Rock_01;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Ships/SM_Veh_Extra_Barrels_Group_01.SM_Veh_Extra_Barrels_Group_01;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Large_06.SM_Env_Rock_Large_06;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Large_03.SM_Env_Rock_Large_03;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2646,7 +2657,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -2662,11 +2673,11 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
-StaticMeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2685,9 +2696,9 @@ ThirdPersonCharacter_C=
 Character=
 Pawn=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-ThirdPersonGameMode_C=
-GameModeBase=
-Info=
+ThirdPersonGameMode_C="\"Object.Levels\" \"Object.Levels\" "
+GameModeBase="\"Object.Levels\" \"Object.Levels\" "
+Info="\"Object.Levels\" \"Object.Levels\" "
 StaticMesh=
 StreamableRenderAsset=
 MonSuperSeau_C=
@@ -2710,7 +2721,7 @@ ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.St
 KillerRake_C=
 RumOnTheRocks_C=
 LevelScriptActor=
-WaterChore_Patrons_C="\"Object.CoinSpawn\" \"Object.CoinSpawn\" "
+WaterChore_Patrons_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
