[SD] Bruitages squelettes (voices)

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ MRUItem7=/Game/(ND)Yohan/LevelYohan
 MRUItem8=/Game/(LD)Maxime/LevelGaetan
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_PRG_Everyone/Music
+ContentBrowserTab1.SelectedPaths=/Game/_PRG_Everyone/Music/Bruitages
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
@@ -184,9 +184,9 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [RootWindow]
-ScreenPosition=X=704.000 Y=0.000
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+ScreenPosition=X=621.000 Y=109.000
+WindowSize=X=1280.000 Y=863.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
