[SD] Added Logic to Play Sounds
On getting launched, on hitting succesfully, on giving a Patron a beer...

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,15 +69,17 @@ LastExecutedLaunchName=DESKTOP-K5HTRQ0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=-8,Y=-8)
+MultipleInstancePositions=(X=320,Y=160)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/(LD)Gaetan/RumOnTheRocks
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/(PRG)Everyone/WaterChore_Patrons.WaterChore_Patrons
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -126,8 +128,8 @@ CurrentRotGridSize=0
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/(LD)Gaetan/RumOnTheRocks
+MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/(PRG)Jonathan/LvlTest
 MRUItem3=/Game/(LD)Maxime/LevelMax
 MRUItem4=/Game/(LD)Maxime/LVL
@@ -137,7 +139,7 @@ MRUItem7=/Game/(ND)Yohan/LevelYohan
 MRUItem8=/Game/(LD)Maxime/LevelGaetan
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_PRG_Everyone/Music/Bruitages
+ContentBrowserTab1.SelectedPaths=/Game/(ART)Everyone/Music/AttenuationSettings
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
@@ -186,7 +188,7 @@ SequenceBrowser.HiddenColumns=Class
 [RootWindow]
 ScreenPosition=X=621.000 Y=109.000
 WindowSize=X=1280.000 Y=863.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -203,7 +205,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Users/yohan/OneDrive/Documents/Unreal Projects/Bone_To_Be_Bad/Content/ThirdPersonBP/Maps
+UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
 BRUSH=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBX=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBXAnim=../../../../../../Fork/Bone_To_Be_Bad/Content/
@@ -1091,9 +1093,9 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 Head_C=StaticMeshComponent.Physics.ConstraintsGroup,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Bucket_C=
-PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoxComponent=BoxComponent.Collision.Collision,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings,
@@ -1183,26 +1185,26 @@ WaterChore_Patrons_C=
 BeerMug_C=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem2=/Game/(PRG)Everyone/KillerRake
+MRUItem0=/Game/(ART)Everyone/Music/AttenuationSettings/Test
+MRUItem1=/Game/(PRG)Everyone/WaterChore_Patrons
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem3=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem4=/Game/(PRG)Jonathan/LvlTest
-MRUItem5=/Game/(PRG)Everyone/WaterTower
-MRUItem6=/Game/(PRG)Everyone/WaterChore_Patrons
-MRUItem7=/Game/(PRG)Everyone/WaterPaymentZone
-MRUItem8=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem9=/Game/(PRG)Everyone/Spawners
-MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem11=/Game/(LD)Maxime/LevelMax
-MRUItem12=/Game/(LD)Maxime/LVL
-MRUItem13=/Game/(LD)Gaetan/LevelGaetan
-MRUItem14=/Game/(PRG)Everyone/Ground_Spikes1
-MRUItem15=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
-MRUItem16=/Game/Ingredients/Mats/LightShaftMaterial
-MRUItem17=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
-MRUItem18=/Game/Ingredients/Mats/GoldenEmissive
-MRUItem19=/Game/Ingredients/Ingredients/Coin
+MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem5=/Game/(PRG)Everyone/KillerRake
+MRUItem6=/Game/(PRG)Jonathan/LvlTest
+MRUItem7=/Game/(PRG)Everyone/WaterTower
+MRUItem8=/Game/(PRG)Everyone/WaterPaymentZone
+MRUItem9=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem10=/Game/(PRG)Everyone/Spawners
+MRUItem11=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem12=/Game/(LD)Maxime/LevelMax
+MRUItem13=/Game/(LD)Maxime/LVL
+MRUItem14=/Game/(LD)Gaetan/LevelGaetan
+MRUItem15=/Game/(PRG)Everyone/Ground_Spikes1
+MRUItem16=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
+MRUItem17=/Game/Ingredients/Mats/LightShaftMaterial
+MRUItem18=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
+MRUItem19=/Game/Ingredients/Mats/GoldenEmissive
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -2412,6 +2414,15 @@ WorldSettings.Rendering=True
 WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.Tick=True
+SoundAttenuation.AttenuationDistance=True
+SoundAttenuation.AttenuationSpatialization=True
+SoundAttenuation.AttenuationAirAbsorption=True
+SoundAttenuation.AttenuationListenerFocus=True
+SoundAttenuation.AttenuationReverbSend=True
+SoundAttenuation.AttenuationOcclusion=True
+SoundAttenuation.AttenuationPriority=True
+SoundAttenuation.AttenuationSubmixSend=True
+SoundAttenuation.AttenuationPluginSettings=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2456,7 +2467,7 @@ bHideUnrelatedNodes=False
 /Game/(PRG)Everyone/WaterPaymentZone.WaterPaymentZone=0
 /Game/(PRG)Everyone/WaterTower.WaterTower=0
 /Game/(PRG)Jonathan/LvlTest.LvlTest:PersistentLevel.LvlTest=0
-/Game/(LD)Gaetan/RumOnTheRocks.RumOnTheRocks:PersistentLevel.RumOnTheRocks=0
+/Game/(LD)Gaetan/RumOnTheRocks.RumOnTheRocks:PersistentLevel.RumOnTheRocks=1
 /Game/PolygonPirates/ParticleFX/P_FX_Bonfire.P_FX_Bonfire=1
 /Game/Ingredients/Mats/GoldenEmissive.GoldenEmissive=1
 /Game/Ingredients/Ingredients/Coin.Coin=1
@@ -2465,6 +2476,7 @@ bHideUnrelatedNodes=False
 /Game/(PRG)Everyone/KillerRake.KillerRake=1
 /Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1=1
 /Game/(PRG)Everyone/WaterChore_Patrons.WaterChore_Patrons=0
+/Game/(ART)Everyone/Music/AttenuationSettings/Test.Test=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/(PRG)Everyone/BeerMug.BeerMug;
@@ -2665,7 +2677,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Settings.Attenuation.PluginSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -2700,9 +2712,9 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
-ThirdPersonCharacter_C=
-Character=
-Pawn=
+ThirdPersonCharacter_C="\"Object.BaseTurnRate\" \"Object.BaseTurnRate\" "
+Character="\"Object.BaseTurnRate\" \"Object.BaseTurnRate\" "
+Pawn="\"Object.BaseTurnRate\" \"Object.BaseTurnRate\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ThirdPersonGameMode_C="\"Object.Levels\" \"Object.Levels\" "
 GameModeBase="\"Object.Levels\" \"Object.Levels\" "
@@ -2727,9 +2739,11 @@ ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius\" \"Object.
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 KillerRake_C=
-RumOnTheRocks_C=
-LevelScriptActor=
+RumOnTheRocks_C="\"Object.numberOfBuckets\" \"Object.numberOfBuckets\" "
+LevelScriptActor="\"Object.numberOfBuckets\" \"Object.numberOfBuckets\" "
 WaterChore_Patrons_C=
+BeerMug_C="\"Object.isFull\" \"Object.isFull\" "
+SoundAttenuation="\"Object.Settings.Attenuation.PluginSettings\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
