--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,9 +8,9 @@ TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/BP_Gamemode.BP_Gamemode_C
 GlobalDefaultServerGameMode=None
-bOffsetPlayerGamepadIds=False
+bOffsetPlayerGamepadIds=True
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
