[TD] End of Game Screen Ranking

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/BP_Gamemode.BP_Gamemode_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
