[GFX] Carried Chest now disappears
- Lerp qui fait rend le coffre de plus en plus petit avant de le détruire, avec effet de particule pour souligner la destruction

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,8 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers.WBP_OrderNumbers
 OpenAssetsAtExit=/Game/(PRG)Everyone/BP_MagicChestStatic.BP_MagicChestStatic
+OpenAssetsAtExit=/Game/(PRG)Everyone/BP_MagicChestCarry.BP_MagicChestCarry
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1265,30 +1267,31 @@ BP_Soup_C=
 BP_Magnum_C=
 PaperSprite=PaperSprite.Sprite.AdditionalSourceTextures,
 BodySetup=
-BP_MagicChestCarry_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+BP_MagicChestCarry_C=
 BP_MagicChestStatic_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+LightComponentBase=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/(PRG)Everyone/BP_MagicChestCarry
-MRUItem1=/Game/(PRG)Everyone/BP_MagicChestStatic
-MRUItem2=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab
-MRUItem3=/Game/(PRG)Everyone/BP_MagicChest
-MRUItem4=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers
-MRUItem5=/Game/_ART_Everyone/Art/BillBoards/Sprites/Soup
-MRUItem6=/Game/_ART_Everyone/Art/BillBoards/Sprites/Ribs
-MRUItem7=/Game/_ART_Everyone/Art/BillBoards/Sprites/Magnum
-MRUItem8=/Game/_ART_Everyone/Art/BillBoards/Sprites/Beer
-MRUItem9=/Game/_ART_Everyone/Art/BillBoards/Sprites/NewPaperSprite
-MRUItem10=/Game/(PRG)Everyone/ValueDisplayer
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem12=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev11_newDeliveries
-MRUItem13=/Game/(PRG)Everyone/BP_Client
-MRUItem14=/Game/(PRG)Everyone/Enum_ClientStateRework
-MRUItem15=/Game/(PRG)Everyone/BP_FoodSpawner
-MRUItem16=/Game/RealLiquidX/M/M_LiquidX_Wine
-MRUItem17=/Game/(PRG)Everyone/BP_Magnum
-MRUItem18=/Game/RealLiquidX/M/M_LiquidX_Soup
-MRUItem19=/Game/RealLiquidX/M/M_LiquidX_Grog
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/(PRG)Everyone/BP_MagicChestCarry
+MRUItem2=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
+MRUItem3=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev11_newDeliveries
+MRUItem4=/Game/(PRG)Everyone/BP_MagicChestStatic
+MRUItem5=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers
+MRUItem6=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab
+MRUItem7=/Game/(PRG)Everyone/BP_MagicChest
+MRUItem8=/Game/_ART_Everyone/Art/BillBoards/Sprites/Soup
+MRUItem9=/Game/_ART_Everyone/Art/BillBoards/Sprites/Ribs
+MRUItem10=/Game/_ART_Everyone/Art/BillBoards/Sprites/Magnum
+MRUItem11=/Game/_ART_Everyone/Art/BillBoards/Sprites/Beer
+MRUItem12=/Game/_ART_Everyone/Art/BillBoards/Sprites/NewPaperSprite
+MRUItem13=/Game/(PRG)Everyone/ValueDisplayer
+MRUItem14=/Game/(PRG)Everyone/BP_Client
+MRUItem15=/Game/(PRG)Everyone/Enum_ClientStateRework
+MRUItem16=/Game/(PRG)Everyone/BP_FoodSpawner
+MRUItem17=/Game/RealLiquidX/M/M_LiquidX_Wine
+MRUItem18=/Game/(PRG)Everyone/BP_Magnum
+MRUItem19=/Game/RealLiquidX/M/M_LiquidX_Soup
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -3587,6 +3590,7 @@ BP_MagicChestPinata_C.Input=True
 BP_MagicChestPinata_C.Actor=True
 BP_MagicChestStatic_C.Default=True
 K2Node_BreakStruct.PinOptions=True
+BP_MagicChestStatic_C.Vectors=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -3940,7 +3944,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.Tags.ComponentTags\" "
+Object="\"Object.Intensity\" \"Object.Intensity\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -3956,11 +3960,11 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
-StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
+StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Intensity\" \"Object.Intensity\" "
+ActorComponent="\"Object.Intensity\" \"Object.Intensity\" "
 BoxComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -3975,9 +3979,9 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
-ThirdPersonCharacter_C="\"Object.Coins\" \"Object.Coins\" "
-Character="\"Object.Coins\" \"Object.Coins\" "
-Pawn="\"Object.Coins\" \"Object.Coins\" "
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ThirdPersonGameMode_C="\"Object.Minutes\" \"Object.Minutes\" "
 GameModeBase=
@@ -4071,7 +4075,7 @@ SkeletalMeshSimulationComponent="\"Object.Tags.ComponentTags\" "
 SplineMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Tags.ComponentTags\" "
 DirectionalLightComponent="\"Object.Tags.ComponentTags\" "
 LightComponent="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
-LightComponentBase="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
+LightComponentBase="\"Object.Intensity\" \"Object.Intensity\" "
 FoodSpawner_C=
 RumOnTheRocks_BIGGER_Rev1_C="\"Object.numberOfBuckets\" \"Object.numberOfBuckets\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
@@ -4149,7 +4153,7 @@ BP_MagicChestCarry_C=
 InstancedStaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SceneCaptureComponent2D="\"Object.Tags.ComponentTags\" "
 SceneCaptureComponent="\"Object.Tags.ComponentTags\" "
-BP_MagicChestStatic_C="\"Object.PressureEndPos2P\" \"Object.PressureEndPos2P\" "
+BP_MagicChestStatic_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
